--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,31 +7,46 @@
     android:orientation="vertical"
     tools:context=".ui.login.LoginActivity">
 
-    <EditText
 
-        android:id="@+id/ed_phoneNumber"
+    <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="16dp"
-        android:hint="phonenumber"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/bg_login" />
+
+    <EditText
+        android:id="@+id/ed_phoneNumber"
+        android:layout_width="395dp"
+        android:layout_height="@dimen/space_44"
+        android:background="@color/white"
+        android:digits="@string/login_digit_phone_number"
+        android:hint="@string/login_hint_phone_number"
+        android:imeOptions="actionNext"
+        android:importantForAutofill="no"
         android:inputType="phone"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        android:maxLength="11"
+        android:paddingStart="@dimen/space_50"
+        android:paddingEnd="@dimen/space_50"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_16"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="match_parent"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="32dp"
         android:background="@color/colorPrimary"
         android:text="Login"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.38" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
