--- a/app/src/main/res/layout/fragment_book_car.xml
+++ b/app/src/main/res/layout/fragment_book_car.xml
@@ -23,7 +23,6 @@
         android:layout_margin="15dp"
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
-        android:layout_marginBottom="8dp"
         android:elevation="5dp"
         android:outlineProvider="bounds"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,10 +41,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/white"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintStart_toStartOf="@+id/searchBar"
         app:layout_constraintTop_toBottomOf="@+id/searchBar"
         tools:ignore="MissingConstraints">
 
@@ -98,17 +98,17 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="@color/white"
         android:orientation="vertical"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/map"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
         tools:ignore="MissingConstraints">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -121,15 +121,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="9"
-            android:orientation="horizontal">
+            android:layout_weight="9">
 
             <TextView
                 android:id="@+id/tv_duration"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="3"
+                android:layout_weight="1"
                 android:text="15km"
                 android:textColor="@color/quantum_googred"
                 android:textSize="12sp" />
@@ -139,7 +138,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="3"
+                android:layout_weight="1"
                 android:text="1h"
                 android:textColor="@color/quantum_googred"
                 android:textSize="12sp" />
@@ -151,7 +150,7 @@
                 android:layout_gravity="center"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_weight="3"
+                android:layout_weight="1"
                 android:text="10.000"
                 android:textColor="@color/quantum_googred"
                 android:textSize="12sp"
@@ -163,6 +162,7 @@
 
 
         <Button
+            android:layout_marginTop="@dimen/space_20"
             android:id="@+id/btn_direction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -170,6 +170,20 @@
             android:background="@color/colorPrimary"
             android:text="Gọi xe" />
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="350dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="151dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
